# iot_metrics_api

./: .gitignore  CMakeLists.txt  IoTMetricsServer.cpp  IoTMetricsServer.h  README.md  main.cpp
docs/html/: _io_t_metrics_server_8cpp.html  _io_t_metrics_server_8cpp.js  _io_t_metrics_server_8h.html  _io_t_metrics_server_8h.js  _io_t_metrics_server_8h_source.html  annotated.html  annotated_dup.js  class_io_t_metrics_server-members.html  class_io_t_metrics_server.html  class_io_t_metrics_server.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  struct_io_t_metrics_server_1_1_histogram_state-members.html  struct_io_t_metrics_server_1_1_histogram_state.html  struct_io_t_metrics_server_1_1_histogram_state.js
docs/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js
docs/latex/: _io_t_metrics_server_8cpp.tex  _io_t_metrics_server_8h.tex  _io_t_metrics_server_8h_source.tex  annotated.tex  class_io_t_metrics_server.tex  files.tex  main_8cpp.tex  refman.tex  struct_io_t_metrics_server_1_1_histogram_state.tex
